After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707297 - gjs_parse_args() wrong check with format 'u'
gjs_parse_args() wrong check with format 'u'
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-02 18:00 UTC by sébastien lafargue
Modified: 2013-10-10 20:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gjs_parse_args() wrong check with format 'u' (1.05 KB, patch)
2013-09-02 18:00 UTC, sébastien lafargue
none Details | Review
Only positive integers must pass the check but actually, strings can pass ( even with no digit in, with a result of 0 ) (43.24 KB, patch)
2013-09-17 21:14 UTC, sébastien lafargue
none Details | Review
Update .gitignore (554 bytes, patch)
2013-09-17 22:00 UTC, sébastien lafargue
none Details | Review
gjs_parse_args() wrong check with format 'u' (1.00 KB, patch)
2013-09-17 22:08 UTC, sébastien lafargue
committed Details | Review

Description sébastien lafargue 2013-09-02 18:00:36 UTC
Only positive integers must pass the check but actually, strings can pass
( even with no digit in, with a result  of 0 )
Comment 1 sébastien lafargue 2013-09-02 18:00:39 UTC
Created attachment 253874 [details] [review]
gjs_parse_args() wrong check with format 'u'

Only positive integers must pass the check but actualy,strings can pass
( even with no digit in, with a result  of 0 )
Comment 2 sébastien lafargue 2013-09-17 21:14:52 UTC
Created attachment 255137 [details] [review]
Only positive integers must pass the check but actually, strings can pass ( even with no digit in, with a result  of 0 )
Comment 3 sébastien lafargue 2013-09-17 22:00:02 UTC
Created attachment 255141 [details] [review]
Update .gitignore
Comment 4 sébastien lafargue 2013-09-17 22:08:18 UTC
Created attachment 255143 [details] [review]
gjs_parse_args() wrong check with format 'u'
Comment 5 Jasper St. Pierre (not reading bugmail) 2013-10-08 18:16:37 UTC
Review of attachment 255143 [details] [review]:

Looks good.
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-10-10 20:43:17 UTC
Attachment 255143 [details] pushed as 4fba307 - gjs_parse_args() wrong check with format 'u'