gjs_parse_args() wrong check with format 'u'

Only positive integers must pass the check but actually, strings can pass
( even with no digit in, with a result  of 0 )

https://bugzilla.gnome.org/show_bug.cgi?id=707297